--- a/simple-python-app/buildspec.yml
+++ b/simple-python-app/buildspec.yml
@@ -1,28 +1,33 @@
 version: 0.2
 
+env:
+  variables:
+    AWS_ACCOUNT_ID: "155343615310"
+    AWS_REGION: "ap-south-1"
+    REPOSITORY_NAME: "my-python-app"
+
 phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin <account-id>.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
-      - REPOSITORY_URI=<account-id>.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/my-docker-app
-      - IMAGE_TAG=$CODEBUILD_RESOLVED_SOURCE_VERSION
+      - ECR_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPOSITORY_NAME
+      - echo $ECR_URI
+      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_URI
+      - IMAGE_TAG=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
   build:
     commands:
       - echo Building the Docker image...
-      - docker build -t $REPOSITORY_URI:latest .
-      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - docker build -t $ECR_URI:latest .
+      - docker tag $ECR_URI:latest $ECR_URI:$IMAGE_TAG
   post_build:
     commands:
       - echo Pushing the Docker images to ECR...
-      - docker push $REPOSITORY_URI:latest
-      - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - echo Writing imagedefinitions.json for deployment...
-      - printf '[{"name":"my-docker-app","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      - docker push $ECR_URI:latest
+      - docker push $ECR_URI:$IMAGE_TAG
+      - echo Writing imagedefinitions.json file...
+      - printf '[{"name":"my-python-app","imageUri":"%s"}]' $ECR_URI:$IMAGE_TAG > imagedefinitions.json
 
 artifacts:
   files:
     - imagedefinitions.json
-
-
